--- a/rewrite_scripts/styles.css
+++ b/rewrite_scripts/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: url('https://media.giphy.com/media/3o7WTDJQVuYwhhuLhC/giphy.gif') !important;
+  background: url('https://testtesttest.gif') !important;
 }
 
 #masthead,
